Project1/force-app/main/default/objects/Item__c/Item__c.object-meta.xml
<CustomObject>
    <label>Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>