Project1/force-app/main/default/objects/Item__c/fields/Guild_Member__c.field-meta.xml
<CustomField>
    <fullName>Guild_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guild Member</label>
    <referenceTo>Guild_Member__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>