Project1/force-app/main/default/objects/Item__c/fields/Guild_Owned__c.field-meta.xml
<CustomField>
    <fullName>Guild_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guild Owned</label>
    <type>Checkbox</type>
</CustomField>