Project1/force-app/main/default/objects/Item__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ammunition</fullName>
            </value>
            <value>
                <fullName>Armor</fullName>
            </value>
            <value>
                <fullName>Casting Focus</fullName>
            </value>
            <value>
                <fullName>Crafting Material</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Spell Components</fullName>
            </value>
            <value>
                <fullName>Utility Item</fullName>
            </value>
            <value>
                <fullName>Weapon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>