Project1/force-app/main/default/objects/Item__c/fields/Magic_Description__c.field-meta.xml
<CustomField>
    <fullName>Magic_Description__c</fullName>
    <label>Magic Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>