Project1/force-app/main/default/objects/Item__c/fields/Properties__c.field-meta.xml
<CustomField>
    <fullName>Properties__c</fullName>
    <label>Properties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Light Armor</fullName>
            </value>
            <value>
                <fullName>Medium Armor</fullName>
            </value>
            <value>
                <fullName>Heavy Armor</fullName>
            </value>
            <value>
                <fullName>Shield</fullName>
            </value>
            <value>
                <fullName>Ammunition</fullName>
            </value>
            <value>
                <fullName>Finesse</fullName>
            </value>
            <value>
                <fullName>Heavy</fullName>
            </value>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Loading</fullName>
            </value>
            <value>
                <fullName>Range</fullName>
            </value>
            <value>
                <fullName>Reach</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
            <value>
                <fullName>Thrown</fullName>
            </value>
            <value>
                <fullName>Two-Handed</fullName>
            </value>
            <value>
                <fullName>Versatile</fullName>
            </value>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Martial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>